# cmake_embedded

./: CMakeLists.txt
lib_test/: CMakeLists.txt
lib_test/test1/: CMakeLists.txt
lib_test/test1/inc/: test1.h
lib_test/test1/src/: test1.cpp
lib_test/test2/: CMakeLists.txt
lib_test/test2/inc/: test2.h
lib_test/test2/src/: test2.cpp
src/: main.cpp
